begynt på produktside og handlekurv side

--- a/produkt.html
+++ b/produkt.html
@@ -12,24 +12,31 @@
     </head>
     <body>
         <div id="grid-container">
-        <header>
-            <nav>
-                <a href="index.html" id="logo">FLIP</a>
-                 <div>
-                    <i id="magnifying-glass" class="fa-solid fa-magnifying-glass"></i>
+            <header>
+                <nav>
                     <i id="ham" class="fa-solid fa-bars"></i>
-                    <i id="heart" class="fa-regular fa-heart"></i>
-                    <i id="shopping-cart" class="fa-solid fa-cart-shopping"></i>
-                    <i id="user" class="fa-regular fa-user"></i>
-                 </div>
-                 <ul class="navbar">
-                    <li><a href="produkt.html">Dame</a></li>
-                    <li><a href="#">Menn</a></li>
-                    <li><a href="#">Barn</a></li>
-                 </ul>
-                <ul class="navbar2">
-                    <li><a href="index.html">Hjem</a></li>
-                    <li><a href="#">Sneakers</a></li>
-                </ul>
-            </nav>
-        </header>
+                    <div>
+                        <a href="index.html" id="logo">FLIP</a>
+                        <i id="heart" class="fa-regular fa-heart"></i>
+                        <a href="handlekurv.html"><i  id="shopping-cart" class="fa-solid fa-cart-shopping"></i></a>
+                        <i id="user" class="fa-regular fa-user"></i>
+                    </div>
+                    <ul class="navvbar">
+                        <li><a href="produkt.html">Dame</a></li>
+                        <li><a href="#">Menn</a></li>
+                        <li><a href="#">Barn</a></li>
+                    </ul>
+                    <ul class="navbar2">
+                        <li><a href="index.html">Hjem</a></li>
+                        <li><a href="#">Sneakers</a></li>
+                    </ul>
+                </nav>
+                <!--Seksjon 1 for søkefelt-->
+                <section class="search">
+                    <form method="post" action="#">
+                        <input type="text" name="search" placeholder="SEARCH" id="search">
+                        <i id="magnifying-glass" class="fa-solid fa-magnifying-glass"></i>
+                    </form>
+                </section>
+            </header>
+
