--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <a href="handlekurv.html"><i  id="shopping-cart" class="fa-solid fa-cart-shopping"></i></a>
                     <i id="user" class="fa-regular fa-user"></i>
                  </div>
+                 <hr><br>
                  <ul class="navvbar">
                     <li><a href="produkt.html">Dame</a></li>
                     <li><a href="#">Menn</a></li>
@@ -36,15 +37,13 @@
             </section>
         </header>
         <main>
-            
             <!--Seksjon 2 new arrivals-->
             <section class="main-campaign">
                 <img src="img/forside-stort.jpg" alt="bilde av dame med svarte boots">
                 <section>
                     <h1>NEW ARRIVALS</h1>
                     <p>Bli klar for hørsten med lekre nyheter</p>
-                    <a href="#" class="beige-btn">Shop nyheter</a>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <a href="#" class="beige-btn">Shop nyheter <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
             </section>
             <!--Seksjon 3 for boots-->
@@ -52,8 +51,7 @@
                 <img src="img/boots.jpg" alt="Image category for boots">
                 <section>
                     <h2>BOOTS</h2>
-                    <a href="#" class="beige-btn">Shop nå</a>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <a href="#" class="beige-btn">Shop nå <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
             </section>
             <!--Seksjon 4 for tøfler-->
@@ -61,8 +59,7 @@
                 <img src="img/tofler.jpeg" alt="Image category for tofler">
                 <section>
                     <h2>TØFLER</h2>
-                    <a href="#" class="beige-btn">Shop nå</a>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <a href="#" class="beige-btn">Shop nå <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
             </section>
             <!--Seksjon 5 for sneakers-->
@@ -70,8 +67,7 @@
                 <img src="img/sneakers.jpg" alt="Image category for sneakers">
                 <section>
                     <h2>SNEAKERS</h2>
-                    <a href="produkt.html" class="beige-btn">Shop nå</a>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <a href="produkt.html" class="beige-btn">Shop nå <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
             </section>
         </main>
