--- a/produkt.html
+++ b/produkt.html
@@ -39,4 +39,53 @@
                     </form>
                 </section>
             </header>
-
+            <main>
+                <h1>SNEAKERS</h1>
+                <a href="#" class="beige-btn">Filter <i class="fa-solid fa-sliders"></i></a>
+                <a href="#"><img src="img/1boks.png" alt="image for choosing one column" class="view-mode"></a>
+                <a href="#"><img src="img/4bokser.png" alt="Image for choosing 4 column" class="view-mode"></a>
+                
+                <section class="default-flex">
+                    <!--Article for Nike skoene-->
+                    <article>
+                        <!--legge til en boks som skal ligge bak bildene og teksten til bildene-->
+                        <img src="img/sko1.jpg" alt="Image for Nike shoes">
+                        <h2 class="brand">Nike Sportswear</h2>
+                        <p>AIR FORCE 1 '07</p>
+                        <p>1 256,00kr</p>
+                    </article>
+                    <!--Article for Puma skoene-->
+                    <article>
+                        <!--legge til en boks som skal ligge bak bildene og teksten til bildene-->
+                        <img src="img/sko2.jpg" alt="Image for Puma shoes">
+                        <h2 class="brand">Puma</h2>
+                        <p>JADA RENEW</p>
+                        <p>619,00kr</p>
+                    </article>
+                    <!--Article for Veja skoene-->
+                    <article>
+                        <!--legge til en boks som skal ligge bak bildene og teksten til bildene-->
+                        <img src="img/sko3.jpg" alt="Image for Veja shoes">
+                        <h2 class="brand">Veja</h2>
+                        <p>CAMPO</p>
+                        <p>1 545,00kr</p>
+                    </article>
+                    <!--Article for Adidas skoene-->
+                    <article>
+                        <!--legge til en boks som skal ligge bak bildene og teksten til bildene-->
+                        <img src="img/sko4.jpg" alt="Image for Adidas shoes">
+                        <h2 class="brand">adidas Originals</h2>
+                        <p>GAZELLE</p>
+                        <p>989,00kr</p>
+                    </article>
+                </section>
+            </main>
+            <footer>
+                <ul id="social-icons">
+                    <li id="instagram" class="fa-brands fa-instagram"></li>
+                    <li id="facebook" class="fa-brands fa-square-facebook"></li>
+                </ul>
+            </footer>
+        </div>
+    </body>
+</html>
