--- a/handlekurv.html
+++ b/handlekurv.html
@@ -15,20 +15,18 @@
             <header>
                 <nav>
                     <i id="ham" class="fa-solid fa-bars"></i>
+                    <i id="magnifying-glass" class="fa-solid fa-magnifying-glass"></i>
                     <div>
                         <a href="index.html" id="logo">FLIP</a>
                         <i id="heart" class="fa-regular fa-heart"></i>
-                        <a href="handlekurv.html"><i  id="shopping-cart" class="fa-solid fa-cart-shopping"></i></a>
+                        <!--Dette tipset har jeg fra https://stackoverflow.com/questions/51304169/how-to-put-the-number-at-top-right-corner-of-cart-icon - Den tar og lager en egen klasse som den posisjonerer oppe på ikonet. Henter så inn riktig ikon med unicoden til ikonet fra fontawesome -->
+                        <a href="handlekurv.html"><i class="fa badge" style="font-size:24px;color:#000" value=2>&#xf07a;</i></a>
                         <i id="user" class="fa-regular fa-user"></i>
                     </div>
                     <ul class="navvbar">
                         <li><a href="produkt.html">Dame</a></li>
                         <li><a href="#">Menn</a></li>
                         <li><a href="#">Barn</a></li>
-                    </ul>
-                    <ul class="navbar2">
-                        <li><a href="index.html">Hjem</a></li>
-                        <li><a href="#">Sneakers</a></li>
                     </ul>
                     <ul class="navbar3">
                         <li><a href="index.html">Hjem</a></li>
@@ -37,3 +35,41 @@
                     </ul>
                 </nav>
             </header>
+            <main>
+                <h1>HANDLEKURV (2 varer)</h1>
+                <!--Seksjon for skoene i handlekurven-->
+                <section class="default-flex">
+                    <article>
+                        <img src="img/sko2.jpg" alt="Image for Puma shoes">
+                        <h2 class="brand">Puma</h2>
+                        <p>JADA RENEW</p>
+                        <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
+                        <a href="#" class="white-btn">Antall 1 <i class="fa-solid fa-chevron-down"></i></a>
+                        <p>619,00kr</p>
+                    </article>
+                    <article>
+                        <img src="img/sko1.jpg" alt="Image for Nike shoes">
+                        <h2 class="brand">Nike Sportswear</h2>
+                        <p>AIR FORCE 1 '07</p>
+                        <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
+                        <a href="#" class="white-btn">Antall 1 <i class="fa-solid fa-chevron-down"></i></a>
+                        <p>1 256,00kr</p>
+                    </article>
+                </section>
+                <section>
+                    <h2>Total sum</h2>
+                    <p>Mellomsum</p>
+                    <p>Frakt</p>
+                    <p>Total sum</p>
+                    <a href="#" class="dark-beige-btn">TIL KASSEN</a>
+                </section>
+            </main>
+            <footer>
+                <ul id="social-icons">
+                    <li id="instagram" class="fa-brands fa-instagram"></li>
+                    <li id="facebook" class="fa-brands fa-square-facebook"></li>
+                </ul>
+            </footer>
+        </div>
+    </body>
+</html>
