--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
         <header>
             <nav>
                 <i id="ham" class="fa-solid fa-bars"></i>
+                <a href="index.html" id="logo">FLIP</a>
                  <div>
-                    <a href="index.html" id="logo">FLIP</a>
                     <i id="heart" class="fa-regular fa-heart"></i>
                     <a href="handlekurv.html"><i  id="shopping-cart" class="fa-solid fa-cart-shopping"></i></a>
                     <i id="user" class="fa-regular fa-user"></i>
                  </div>
-                 <hr><br>
-                 <ul class="navvbar">
+            </nav>
+                 <hr class="strek">
+                 <ul class="navbar">
                     <li><a href="produkt.html">Dame</a></li>
                     <li><a href="#">Menn</a></li>
                     <li><a href="#">Barn</a></li>
                  </ul>
-            </nav>
+            
             <!--Seksjon 1 for søkefelt-->
             <section class="search">
                 <form method="post" action="#">
@@ -40,7 +41,7 @@
             <!--Seksjon 2 new arrivals-->
             <section class="main-campaign">
                 <img src="img/forside-stort.jpg" alt="bilde av dame med svarte boots">
-                <section>
+                <section class="text-main-campaign">
                     <h1>NEW ARRIVALS</h1>
                     <p>Bli klar for hørsten med lekre nyheter</p>
                     <a href="#" class="beige-btn">Shop nyheter <i class="fa-solid fa-arrow-right"></i></a>
@@ -49,15 +50,15 @@
             <!--Seksjon 3 for boots-->
             <section class="left">
                 <img src="img/boots.jpg" alt="Image category for boots">
-                <section>
+                <section class="text-left">
                     <h2>BOOTS</h2>
                     <a href="#" class="beige-btn">Shop nå <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
             </section>
             <!--Seksjon 4 for tøfler-->
-            <section class="middel">
+            <section class="middle">
                 <img src="img/tofler.jpeg" alt="Image category for tofler">
-                <section>
+                <section class="text-middle">
                     <h2>TØFLER</h2>
                     <a href="#" class="beige-btn">Shop nå <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
@@ -65,7 +66,7 @@
             <!--Seksjon 5 for sneakers-->
             <section class="right">
                 <img src="img/sneakers.jpg" alt="Image category for sneakers">
-                <section>
+                <section class="text-right">
                     <h2>SNEAKERS</h2>
                     <a href="produkt.html" class="beige-btn">Shop nå <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
