skrevet nesten ferdig css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </form>
             </section>
         </header>
-        <main>
+        <main class="front-page">
             <!--Seksjon 2 new arrivals-->
             <section class="main-campaign">
                 <img src="img/forside-stort.jpg" alt="bilde av dame med svarte boots">
