--- a/handlekurv.html
+++ b/handlekurv.html
@@ -32,38 +32,46 @@
             <main>
                 <h1>HANDLEKURV (2 varer)</h1>
                 <!--Seksjon for skoene i handlekurven-->
-                <section class="default-flex">
-                    <article>
+                <section class="handlekurv-flex">
+                    <article class="products-handlekurv">
                         <img src="img/sko2.jpg" alt="Image for Puma shoes">
-                        <h2 class="brand">Puma</h2>
-                        <p>JADA RENEW</p>
-                        <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
-                        <a href="#" class="white-btn">Antall 1 <i class="fa-solid fa-chevron-down"></i></a>
-                        <p>619,00kr</p>
+                        <article class="text-handlekurv">
+                            <h2 class="brand">Puma</h2>
+                            <p>JADA RENEW</p>
+                            <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
+                            <a href="#" class="white-btn">Antall 1 <i class="fa-solid fa-chevron-down"></i></a>
+                            <p>619,00kr</p>
+                        </article>
                     </article>
-                    <article>
+                    <article class="products-handlekurv">
                         <img src="img/sko1.jpg" alt="Image for Nike shoes">
-                        <h2 class="brand">Nike Sportswear</h2>
-                        <p>AIR FORCE 1 '07</p>
-                        <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
-                        <a href="#" class="white-btn">Antall 1 <i class="fa-solid fa-chevron-down"></i></a>
-                        <p>1 256,00kr</p>
+                        <article class="text-handlekurv">
+                            <h2 class="brand">Nike Sportswear</h2>
+                            <p>AIR FORCE 1 '07</p>
+                            <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
+                            <a href="#" class="white-btn">Antall 1 <i class="fa-solid fa-chevron-down"></i></a>
+                            <p>1 256,00kr</p>
+                        </article>
                     </article>
                 </section>
                 <!--Seksjon for betaling-->
                 <section class="faktura">
-                    <h2>Total sum</h2>
-                    <p>Mellomsum</p>
-                    <p>Frakt</p>
-                    <p>Total sum</p>
-                    <a href="#" class="dark-beige-btn">TIL KASSEN</a>
-                </section>
-                <!--Seksjon for betalingsmåter-->
-                <section class="betalingsmåter">
-                    <img src="img/Klarna.jpeg" alt="logo for klarna">
-                    <img src="img/vipps.jpeg" alt="logo for vipps">
-                    <img src="img/Mastercard.jpeg" alt="logo for mastercard">
-                    <img src="img/visa.jpeg" alt="logo for visa">
+                    <section class="text-faktura">
+                        <h2>Total sum</h2>
+                        <p>Mellomsum</p>
+                        <p>Frakt</p>
+                        <p>Total sum</p>
+                    </section>
+                    <section class="betalingsmaater-center">
+                        <a href="#" class="dark-beige-btn">TIL KASSEN</a>
+                        <!--Seksjon for betalingsmåter-->
+                        <section class="betalingsmaater">
+                            <img src="img/Klarna.jpeg" alt="logo for klarna">
+                            <img src="img/vipps.jpeg" alt="logo for vipps">
+                            <img src="img/Mastercard.jpeg" alt="logo for mastercard">
+                            <img src="img/visa.jpeg" alt="logo for visa">
+                        </section>
+                    </section>
                 </section>
             </main>
             <footer>
