--- a/handlekurv.html
+++ b/handlekurv.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--Brukt kode som Ann-Charlott Beatrice Karlsen har vist i forelesninger-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
@@ -33,8 +34,10 @@
                 <h1>HANDLEKURV (2 varer)</h1>
                 <!--Seksjon for skoene i handlekurven-->
                 <section class="handlekurv-flex">
+                    <!--Artikkel for Puma skoene-->
                     <article class="products-handlekurv">
                         <img src="img/sko2.jpg" alt="Image for Puma shoes">
+                        <!--Artikkel for teksten i artikkel for puma skoene-->
                         <article class="text-handlekurv">
                             <h2 class="brand">Puma</h2>
                             <p>JADA RENEW</p>
@@ -43,8 +46,10 @@
                             <p>619,00kr</p>
                         </article>
                     </article>
+                    <!--Artikkel for Nike skoene-->
                     <article class="products-handlekurv">
                         <img src="img/sko1.jpg" alt="Image for Nike shoes">
+                        <!--Artikkel for tekst i artikkelen for Nike skoene-->
                         <article class="text-handlekurv">
                             <h2 class="brand">Nike Sportswear</h2>
                             <p>AIR FORCE 1 '07</p>
@@ -57,18 +62,37 @@
                 <!--Seksjon for betaling-->
                 <section class="faktura">
                     <section class="text-faktura">
+                        <!--Brukte tabel i W3 schools for å få betalingsboksen til å bli riktig. https://www.w3schools.com/html/html_tables.asp-->
                         <h2>Total sum</h2>
-                        <p>Mellomsum</p>
-                        <p>Frakt</p>
-                        <p>Total sum</p>
+                        <table class="table-faktura">
+                            <tr>
+                                <td>Mellomsum</td>
+                                <td>1 875kr</td>
+                            </tr>
+                            <tr>
+                                <td>Frakt</td>
+                                <td>0,00kr</td>
+                            </tr>
+                            <hr class="strek2">
+                            <tr>
+                                <td>Total sum</td>
+                                <td>1 875kr</td>
+                            </tr>
+                        </table>
+                        
                     </section>
+                    <!--Seksjon for å få "til kassen" knappen og alle betalingsmåtene sentrert-->
                     <section class="betalingsmaater-center">
                         <a href="#" class="dark-beige-btn">TIL KASSEN</a>
                         <!--Seksjon for betalingsmåter-->
                         <section class="betalingsmaater">
+                            <!--https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Klarna_Payment_Badge.svg/1024px-Klarna_Payment_Badge.svg.png-->
                             <img src="img/Klarna.jpeg" alt="logo for klarna">
+                            <!--https://www.lucaregnskap.no/assets/images/vipps-logo.png-->
                             <img src="img/vipps.jpeg" alt="logo for vipps">
+                            <!--https://cdn.vox-cdn.com/thumbor/FtAV-Waa1rTPheAkxv3o4i0MVf0=/0x0:1000x1000/1200x800/filters:focal(421x430:581x590)/cdn.vox-cdn.com/uploads/chorus_image/image/62800797/Mastercard_logo.0.jpg-->
                             <img src="img/Mastercard.jpeg" alt="logo for mastercard">
+                            <!--https://usa.visa.com/dam/VCOM/regional/ve/romania/blogs/hero-image/visa-logo-800x450.jpg-->
                             <img src="img/visa.jpeg" alt="logo for visa">
                         </section>
                     </section>
