skriver desktop versjonen

--- a/handlekurv.html
+++ b/handlekurv.html
@@ -39,6 +39,7 @@
                         <img src="img/sko2.jpg" alt="Image for Puma shoes">
                         <!--Artikkel for teksten i artikkel for puma skoene-->
                         <article class="text-handlekurv">
+                            <i id="trash" class="fa-solid fa-trash"></i>
                             <h2 class="brand">Puma</h2>
                             <p>JADA RENEW</p>
                             <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
@@ -51,6 +52,7 @@
                         <img src="img/sko1.jpg" alt="Image for Nike shoes">
                         <!--Artikkel for tekst i artikkelen for Nike skoene-->
                         <article class="text-handlekurv">
+                            <i id="trash" class="fa-solid fa-trash"></i>
                             <h2 class="brand">Nike Sportswear</h2>
                             <p>AIR FORCE 1 '07</p>
                             <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
@@ -67,19 +69,19 @@
                         <table class="table-faktura">
                             <tr>
                                 <td>Mellomsum</td>
-                                <td>1 875kr</td>
+                                <td style="float: right;">1 875kr</td>
                             </tr>
                             <tr>
                                 <td>Frakt</td>
-                                <td>0,00kr</td>
+                                <td style="float: right;">0,00kr</td>
                             </tr>
-                            <hr class="strek2">
                             <tr>
                                 <td>Total sum</td>
-                                <td>1 875kr</td>
+                                <td style="float: right;">1 875kr</td>
                             </tr>
                         </table>
-                        
+                        <!--Legg den på riktig plass!!-->
+                        <hr class="strek2">
                     </section>
                     <!--Seksjon for å få "til kassen" knappen og alle betalingsmåtene sentrert-->
                     <section class="betalingsmaater-center">
