Ferdig med å skrive koder i html og css

--- a/handlekurv.html
+++ b/handlekurv.html
@@ -52,7 +52,7 @@
                         <img src="img/sko1.jpg" alt="Image for Nike shoes">
                         <!--Artikkel for tekst i artikkelen for Nike skoene-->
                         <article class="text-handlekurv">
-                            <i id="trash" class="fa-solid fa-trash"></i>
+                            <i id="trash2" class="fa-solid fa-trash"></i>
                             <h2 class="brand">Nike Sportswear</h2>
                             <p>AIR FORCE 1 '07</p>
                             <a href="#" class="white-btn">Strl 39 <i class="fa-solid fa-chevron-down"></i></a>
