--- a/produkt.html
+++ b/produkt.html
@@ -58,7 +58,7 @@
                     <article class="products">
                         <!--Article for hjerte ikonet i hjørtet av skoene på produkt siden-->
                         <article class="favoritt">
-                            <i id="heart" class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </article>
                         <!--https://img01.ztat.net/article/spp-media-p1/ad0a8ed9cd264baea11cb56b8b3e7b52/f0906d2915e64dec8043520a2498adcf.jpg?imwidth=1800-->
                         <img src="img/sko1.jpg" alt="Image for Nike shoes">
@@ -70,7 +70,7 @@
                     <article class="products">
                         <!--Article for hjerte ikonet i hjørtet av skoene på produkt siden-->
                         <article class="favoritt">
-                            <i id="heart" class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </article>
                         <!--https://img01.ztat.net/article/spp-media-p1/9fb3448b675f4a188a61b053cebb01d2/ab276058d7e0461daf12cee0d8a28d7a.jpg?imwidth=1800&filter=packshot-->
                         <img src="img/sko2.jpg" alt="Image for Puma shoes">
@@ -82,7 +82,7 @@
                     <article class="products">
                         <!--Article for hjerte ikonet i hjørtet av skoene på produkt siden-->
                         <article class="favoritt">
-                            <i id="heart" class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </article>
                         <!--https://img01.ztat.net/article/spp-media-p1/80240b5a4817408a8cf6dd9d99d1d1d7/ecc2e0289bbb4792a3790c7482fb3a79.jpg?imwidth=1800&filter=packshot-->
                         <img src="img/sko3.jpg" alt="Image for Veja shoes">
@@ -94,7 +94,7 @@
                     <article class="products">
                         <!--Article for hjerte ikonet i hjørtet av skoene på produkt siden-->
                         <article class="favoritt">
-                            <i id="heart" class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart"></i>
                         </article>
                         <!--https://img01.ztat.net/article/spp-media-p1/74900a79d2dd4677b45c55f7cc1db5b1/68bad99553704a73b2f23cc17d06c71d.jpg?imwidth=1800&filter=packshot-->
                         <img src="img/sko4.jpg" alt="Image for Adidas shoes">
